- Fixes svg files  - Fix styling it out heading alignment
Former-commit-id: 6e163a55f412e8144f8bcdbc2b35f5c2590d97c5 [formerly 7072be3718e4adbbf24b76d0f53304b6d32b8b40 [formerly 53b76ac03b825a0a28ada4be7aa0b4981399624b]]
Former-commit-id: 942bf0282e37f74686bbe2a74166f4c188de52b8
Former-commit-id: 608dde09d583831385d822ed63c0609b26ed7616

--- a/issues/music/assets/custom.css
+++ b/issues/music/assets/custom.css
@@ -76,7 +76,8 @@ article.page .body h3 {
 }
 
 article.page .body h4 {
-  display: inline-block;
+  font-family: "EB Garamond";
+
   margin-bottom: 0em;
 }
 
@@ -186,10 +187,16 @@ article.toc.page .body p:first-child {
   Story 1: Interview;
 */
 
+article.page[data-page="1-styling-it-out"] header  {
+  padding-top: 130px;
+}
+
 article.page[data-page="1-styling-it-out"] header .category {
   color: black;
   text-align: left;
-  font-size: 32px;
+  margin-top: 200px;
+  font-size: 40px;
+  top: 200px;
   font-family: 'rodondoregular';
 }
 
